--- a/index.html
+++ b/index.html
@@ -103,3 +103,43 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+<body>
+    <header>
+        <!-- 기존 코드 생략 -->
+        <div id="user-panel">
+            <!-- 기존 코드 생략 -->
+        </div>
+    </header>
+
+    <main>
+        <section class="product-list" id="product-list">
+            <!-- 여성 의류 상품 목록 -->
+            <div class="product">
+                <img src="<a href="https://ibb.co/9ZvHbfm"><img src="https://i.ibb.co/9ZvHbfm/Kakao-Talk-20231116-185032034.jpg" alt="Kakao-Talk-20231116-185032034" border="0"></a>" alt="플로럴 프릴 드레스">
+                <h2>플로럴 프릴 드레스</h2>
+                <p class="price">$50.00</p>
+                <button onclick="addToCart('플로럴 프릴 드레스', 50.00)">장바구니에 추가</button>
+            </div>
+
+            <!-- 다른 상품들도 유사하게 추가 가능 -->
+        </section>
+
+        <section class="shopping-cart">
+            <!-- 기존 코드 생략 -->
+        </section>
+    </main>
+
+    <div id="login-form-overlay" onclick="closeLoginForm()"></div>
+    <div id="login-form">
+        <!-- 기존 코드 생략 -->
+    </div>
+
+    <div id="product-detail-overlay" onclick="closeProductDetail()"></div>
+    <div id="product-detail">
+        <!-- 기존 코드 생략 -->
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
