--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <section class="product-list" id="product-list">
             <!-- 여성 의류 상품 목록 -->
             <div class="product">
-                <img src="<a href="https://ibb.co/9ZvHbfm"><img src="https://i.ibb.co/9ZvHbfm/Kakao-Talk-20231116-185032034.jpg" alt="Kakao-Talk-20231116-185032034" border="0"></a>" alt="플로럴 프릴 드레스">
+                <img src="<<a href="https://ibb.co/9ZvHbfm"><img src="https://i.ibb.co/jJ5kyx9/Kakao-Talk-20231116-185032034.jpg" alt="Kakao-Talk-20231116-185032034" border="0"></a>>" alt="플로럴 프릴 드레스">
                 <h2>플로럴 프릴 드레스</h2>
                 <p class="price">$50.00</p>
                 <button onclick="addToCart('플로럴 프릴 드레스', 50.00)">장바구니에 추가</button>
