--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>여성 의류 쇼핑몰</title>
+    <title>소루링 클로젯</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>여성 의류 쇼핑몰</h1>
+        <h1>소루링 클로젯</h1>
     </header>
 
     <main>
