--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <header>
         <!-- 기존 코드 생략 -->
         <div id="user-panel">
-            <span id="user-greeting">안녕하세요, 손님!</span>
+            <span id="user-greeting"> 이랏샤이마세 ^^ 쪽 !</span>
             <button onclick="toggleLoginForm()">로그인</button>
         </div>
     </header>
@@ -66,15 +66,6 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-<body>
-    <header>
-        <!-- 기존 코드 생략 -->
-        <div id="user-panel">
-            <span id="user-greeting">안녕하세요, 손님!</span>
-            <button onclick="toggleLoginForm()">로그인</button>
-        </div>
-    </header>
 
     <main>
         <section class="product-list" id="product-list">
