--- a/index.html
+++ b/index.html
@@ -15,13 +15,19 @@
         <section class="product-list">
             <!-- 여성 의류 상품 목록 -->
             <div class="product">
-                "<<a href="https://ibb.co/9ZvHbfm"><img src="https://i.ibb.co/9ZvHbfm/Kakao-Talk-20231116-185032034.jpg" alt="Kakao-Talk-20231116-185032034" border="0"></a>
-                <h2>플로럴 프릴 드레스</h2>
+                <a href="https://ibb.co/9ZvHbfm"><img src="https://i.ibb.co/9ZvHbfm/Kakao-Talk-20231116-185032034.jpg" alt="Kakao-Talk-20231116-185032034" border="0"></a>
+                <h2>섹시 골지 원피스</h2>
                 <p class="price">$50.00</p>
-                <button onclick="addToCart('플로럴 프릴 드레스', 50.00)">장바구니에 추가</button>
+                <button onclick="addToCart('섹시 골지 원피스', 50000)">장바구니에 추가</button>
             </div>
 
-            <!-- 다른 상품들도 유사하게 추가 가능 -->
+             <!-- 새로운 상품 추가 -->
+            <div class="product">
+               <a href="https://ibb.co/d0mZtWR"><img src="https://i.ibb.co/d0mZtWR/Kakao-Talk-20231119-205356454.jpg" alt="Kakao-Talk-20231119-205356454" border="0"></a>
+                <h2>핑크 펀칭 비키니</h2>
+                <p class="price">$45.00</p>
+                <button onclick="addToCart('핑크 펀칭 비키니', 30000)">장바구니에 추가</button>
+            </div>
         </section>
 
         <section class="shopping-cart">
