--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="product">
                 <a href="https://ibb.co/9ZvHbfm"><img src="https://i.ibb.co/9ZvHbfm/Kakao-Talk-20231116-185032034.jpg" alt="Kakao-Talk-20231116-185032034" border="0"></a>
                 <h2>섹시 골지 원피스</h2>
-                <p class="price">$50.00</p>
+                <p class="price">50000원</p>
                 <button onclick="addToCart('섹시 골지 원피스', 50000)">장바구니에 추가</button>
             </div>
 
@@ -25,8 +25,16 @@
             <div class="product">
                <a href="https://ibb.co/d0mZtWR"><img src="https://i.ibb.co/d0mZtWR/Kakao-Talk-20231119-205356454.jpg" alt="Kakao-Talk-20231119-205356454" border="0"></a>
                 <h2>핑크 펀칭 비키니</h2>
-                <p class="price">$45.00</p>
+                <p class="price">30000원</p>
                 <button onclick="addToCart('핑크 펀칭 비키니', 30000)">장바구니에 추가</button>
+            </div>
+
+            <!-- 새로운 상품 추가 -->
+            <div class="product">
+              <a href="https://ibb.co/98PyvRC"><img src="https://i.ibb.co/98PyvRC/Kakao-Talk-20231120-200437603.jpg" alt="Kakao-Talk-20231120-200437603" border="0"></a>
+                <h2>여신 여리 원피스</h2>
+                <p class="price">40000원원</p>
+                <button onclick="addToCart('핑크 펀칭 비키니', 40000)">장바구니에 추가</button>
             </div>
         </section>
 
@@ -66,6 +74,7 @@
             <label for="password">비밀번호:</label>
             <input type="password" id="password" name="password" required>
             <button type="submit" onclick="login()">로그인</button>
+            <button onclick="redirectToSignUp()">회원가입</button>
         </form>
     </div>
 
