--- a/index.html
+++ b/index.html
@@ -110,3 +110,43 @@
 </body>
 </html>
 
+// 회원가입
+<!-- signup.html -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>회원가입</title>
+    <link rel="stylesheet" href="styles.css">
+    <!-- 여기에 필요한 스타일 시트를 추가하세요 -->
+</head>
+<body>
+    <header>
+        <!-- 필요한 경우 회원가입 페이지의 헤더 추가 -->
+    </header>
+
+    <main>
+        <section id="signup-form">
+            <h2>회원가입</h2>
+            <form>
+                <!-- 회원가입 양식 요소들을 추가하세요 -->
+                <label for="username">아이디:</label>
+                <input type="text" id="username" name="username" required>
+                <label for="password">비밀번호:</label>
+                <input type="password" id="password" name="password" required>
+                <label for="confirm-password">비밀번호 확인:</label>
+                <input type="password" id="confirm-password" name="confirm-password" required>
+                <button type="submit">가입하기</button>
+            </form>
+        </section>
+    </main>
+
+    <footer>
+        <!-- 필요한 경우 회원가입 페이지의 푸터 추가 -->
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
