--- a/index.html
+++ b/index.html
@@ -150,3 +150,21 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+
+<!-- index.html -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>쇼핑몰</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <!-- 기존 내용 생략 -->
+
+    <script src="script.js"></script>
+</body>
+</html>
