--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="product">
               <a href="https://ibb.co/98PyvRC"><img src="https://i.ibb.co/98PyvRC/Kakao-Talk-20231120-200437603.jpg" alt="Kakao-Talk-20231120-200437603" border="0"></a>
                 <h2>여신 여리 원피스</h2>
-                <p class="price">40000원원</p>
+                <p class="price">40000원</p>
                 <button onclick="addToCart('핑크 펀칭 비키니', 40000)">장바구니에 추가</button>
             </div>
         </section>
@@ -44,7 +44,7 @@
             <ul id="cart-items">
                 <!-- 여기에 장바구니 아이템이 추가됨 -->
             </ul>
-            <p class="total">총합: $<span id="cart-total">0.00</span></p>
+            <p class="total">총합: 원<span id="cart-total">0</span></p>
         </section>
     </main>
 
