--- a/index.html
+++ b/index.html
@@ -28,7 +28,15 @@
                 <p class="price">30000원</p>
                 <button onclick="addToCart('핑크 펀칭 비키니', 30000)">장바구니에 추가</button>
             </div>
-
+            
+     <!-- 새로운 상품 추가 -->
+            <div class="product">
+            <a href="https://ibb.co/3Cwb2vh"><img src="https://i.ibb.co/3Cwb2vh/Kakao-Talk-20231120-200437603-02.jpg" alt="Kakao-Talk-20231120-200437603-02" border="0"></a>
+                <h2>남심저격! 아방핏 원피스 </h2>
+                <p class="price">35000원</p>
+                <button onclick="addToCart('핑크 펀칭 비키니', 35000)">장바구니에 추가</button>
+            </div>
+            
             <!-- 새로운 상품 추가 -->
             <div class="product">
               <a href="https://ibb.co/98PyvRC"><img src="https://i.ibb.co/98PyvRC/Kakao-Talk-20231120-200437603.jpg" alt="Kakao-Talk-20231120-200437603" border="0"></a>
