--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     </header>
 
     <main>
-        <section class="product-list">
+        <section class="product-list">  id="product-list">
             <!-- 여성 의류 상품 목록 -->
-            <div class="product">
+            <div class="product">  data-product-id="1">
                 <a href="https://ibb.co/9ZvHbfm"><img src="https://i.ibb.co/9ZvHbfm/Kakao-Talk-20231116-185032034.jpg" alt="Kakao-Talk-20231116-185032034" border="0"></a>
                 <h2>섹시 골지 원피스</h2>
                 <p class="price">50000원</p>
@@ -22,7 +22,7 @@
             </div>
 
              <!-- 새로운 상품 추가 -->
-            <div class="product">
+            <div class="product">  data-product-id="2">
                <a href="https://ibb.co/d0mZtWR"><img src="https://i.ibb.co/d0mZtWR/Kakao-Talk-20231119-205356454.jpg" alt="Kakao-Talk-20231119-205356454" border="0"></a>
                 <h2>핑크 펀칭 비키니</h2>
                 <p class="price">30000원</p>
@@ -30,7 +30,7 @@
             </div>
             
      <!-- 새로운 상품 추가 -->
-            <div class="product">
+            <div class="product">  data-product-id="3">
             <a href="https://ibb.co/3Cwb2vh"><img src="https://i.ibb.co/3Cwb2vh/Kakao-Talk-20231120-200437603-02.jpg" alt="Kakao-Talk-20231120-200437603-02" border="0"></a>
                 <h2>남심저격! 아방핏 원피스 </h2>
                 <p class="price">35000원</p>
@@ -38,7 +38,7 @@
             </div>
             
             <!-- 새로운 상품 추가 -->
-            <div class="product">
+            <div class="product">  data-product-id="4">
               <a href="https://ibb.co/98PyvRC"><img src="https://i.ibb.co/98PyvRC/Kakao-Talk-20231120-200437603.jpg" alt="Kakao-Talk-20231120-200437603" border="0"></a>
                 <h2>여신 여리 원피스</h2>
                 <p class="price">40000원</p>
