--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
 
              <!-- 새로운 상품 추가 -->
-            <div class="product"> =
+            <div class="product">
                <a href="https://ibb.co/d0mZtWR"><img src="https://i.ibb.co/d0mZtWR/Kakao-Talk-20231119-205356454.jpg" alt="Kakao-Talk-20231119-205356454" border="0"></a>
                 <h2>핑크 펀칭 비키니</h2>
                 <p class="price">30000원</p>
