--- a/index.html
+++ b/index.html
@@ -23,49 +23,7 @@
 
              <!-- 새로운 상품 추가 -->
             <div class="product">
-               <a href="https://ibb.co/d0mZtWR"><img src="https://i.ibb.co/d0mZtWR/Kakao-Talk-20231119-205356454.jpg" alt="Kakao-Talk-20231119-205356454" border="0"></a>
-                <h2>핑크 펀칭 비키니</h2>
-                <p class="price">30000원</p>
-                <button onclick="addToCart('핑크 펀칭 비키니', 30000)">장바구니에 추가</button>
-            </div>
-            
-     <!-- 새로운 상품 추가 -->
-            <div class="product">
-            <a href="https://ibb.co/3Cwb2vh"><img src="https://i.ibb.co/3Cwb2vh/Kakao-Talk-20231120-200437603-02.jpg" alt="Kakao-Talk-20231120-200437603-02" border="0"></a>
-                <h2>남심저격! 아방핏 원피스 </h2>
-                <p class="price">35000원</p>
-                <button onclick="addToCart('핑크 펀칭 비키니', 35000)">장바구니에 추가</button>
-            </div>
-            
-            <!-- 새로운 상품 추가 -->
-            <div class="product"> 
-              <a href="https://ibb.co/98PyvRC"><img src="https://i.ibb.co/98PyvRC/Kakao-Talk-20231120-200437603.jpg" alt="Kakao-Talk-20231120-200437603" border="0"></a>
-                <h2>여신 여리 원피스</h2>
-                <p class="price">40000원</p>
-                <button onclick="addToCart('핑크 펀칭 비키니', 40000)">장바구니에 추가</button>
-            </div>
-        </section>
-
-        <section class="shopping-cart">
-            <!-- 장바구니 내용이 여기에 표시될 수 있음 -->
-            <h2>장바구니</h2>
-            <ul id="cart-items">
-                <!-- 여기에 장바구니 아이템이 추가됨 -->
-            </ul>
-            <p class="total">총합: 원<span id="cart-total">0</span></p>
-        </section>
-    </main>
-
-    <script src="script.js"></script>
-</body>
-</html>
-<!-- 기존 코드 생략 -->
-
-<body>
-    <header>
-        <!-- 기존 코드 생략 -->
-        <div id="user-panel">
-            <span id="user-greeting"> 이랏샤이마세 ^^ 쪽 !</span>
+               <a href="https://ibb.co/d0mZtWR"><img src="h어</span>
             <button onclick="toggleLoginForm()">로그인</button>
         </div>
     </header>
